# Change Log
All notable changes to this project will be documented in this file.
The format is based on [Keep a Changelog](http://keepachangelog.com/) 
and this project adheres to [Semantic Versioning](http://semver.org/).

## [0.1.2] 2017 mar 25
#### fixed
mpiio need to use scratch path explicitly
#### NNotes:
- for mppio:
	1. use scratch path explicitly for adios variable
	2. buffer size in xml shoul be larger than groupsize

## [0.1.1] 2017 Mar 24
#### Notes
- most data generated by lbm is 0
- testes 1 proc, correct
#### ADD
- add analysis component

## [0.1.0] 2017 Mar 23
#### Changed
- removed blocks, now each process need to prepare contiguous buffer for adios
#### To do
- use small size, verify the correctness of data read



