@@ -1,0 +1,54 @@
+#include "adios_adaptor.h"
+
+void insert_into_adios(char * file_path, char *var_name, int n, int size_one, double * buf, MPI_Comm *pcomm){
+    char        filename [256];
+    int         rank, size, i, j;
+    int         NX;
+    
+    //int size_one = SIZE_ONE;
+    // prepare sending buffer
+    //double * t =  buf;
+    //double      t[NX*SIZE_ONE];
+
+    /* ADIOS variables declarations for matching gwrite_temperature.ch */
+    uint64_t    adios_groupsize, adios_totalsize;
+    int64_t     adios_handle;
+
+    MPI_Comm    comm = *pcomm;
+    MPI_Comm_rank (comm, &rank);
+    MPI_Comm_size (comm, &size);
+
+    // nlines of all processes
+    NX = size*n;
+    
+    // lower bound of my line index
+    int lb;
+    lb = rank*n;
+
+    sprintf(filename, "%s/%s.bp", file_path, var_name);
+
+    //printf("rank %d: start to write\n", rank);
+    
+    adios_open (&adios_handle, var_name, filename, "w", comm);
+#ifdef debug
+    printf("rank %d: file %s opened\n", rank, filename);
+#endif
+    /* generated by gpp.py*/
+    //#include "gwrite_atom.ch"
+    adios_groupsize = 4 \
+                    + 4 \
+                    + 4 \
+                    + 4 \
+                    + 8 * (n) * (size_one);
+    adios_group_size (adios_handle, adios_groupsize, &adios_totalsize);
+    adios_write (adios_handle, "NX", &NX);
+    adios_write (adios_handle, "lb", &lb);
+    adios_write (adios_handle, "n", &n);
+    adios_write (adios_handle, "size_one", &size_one);
+    adios_write (adios_handle, var_name, buf);
+
+    printf("rank %d: try to close\n", rank);
+    adios_close (adios_handle);
+    printf("rank %d: file %s closed\n", rank, filename);
+    //printf("rank %d: write completed\n", rank);
+}
