@@ -14,7 +14,24 @@
                type="string"/>
   </adios-group>
 
-  <method group="atom" method="MPI"/>
+  <method group="atom" method="DATASPACES"/>
+
+  <adios-group name="restart" stats="On">
+    <var name="NX" type="integer"/>
+    <var name="lb" type="integer"/>
+    <var name="n" type="integer"/>
+    <var name="size_one" type="integer"/>
+    <global-bounds dimensions="NX, size_one" offsets="lb,0">
+       <var name="restart" gwrite="t" type="double" dimensions="n,size_one" 
+            transform="none"/>
+    </global-bounds>
+    <attribute name="restart/description" 
+               value="snapshot kept by consumer" 
+               type="string"/>
+  </adios-group>
+
+  <method group="restart" method="MPI"/>
+
   <!--method group="temperature" method="MPI_AGGREGATE">stripe_count=1;stripe_size=10485760;num_aggregators=2;merging_pgs=0;num_ost=2</method-->
   <!--method group="temperature" method="PHDF5"/-->
  
