@@ -1,11 +1,0 @@
-#ifndef ADIOS_READ_GLOBAL_H
-#define ADIOS_READ_GLOBAL_H
-#ifdef __cplusplus
-extern "C"{
-#endif
-
-
-#ifdef __cplusplus
-}
-#endif
-#endif
