@@ -14,4 +14,7 @@
 8440002
     Mar 25 19;16
     if data size too large, need larger buffer to fit all data
+8445129
+    Mar 26 13:10
+    if adding  keeping, reader no actions
     
