@@ -10,7 +10,8 @@ mpiio need to use scratch path explicitly
 - for mppio:
 	1. use scratch path explicitly for adios variable
 	2. buffer size in xml shoul be larger than groupsize
-
+#### changed
+add kep using mpiio, now new ads_adaptor.c/h is created
 ## [0.1.1] 2017 Mar 24
 #### Notes
 - most data generated by lbm is 0
